<resources>
    <string name="app_name">File Chooser</string>
    <string name="action_settings">Settings</string>

    <string name="action_back">Back</string>
    <string name="action_new">New</string>

    <string name="empty_string"></string>

    <string name="prefs_category_general">General</string>

    <string name="prefs_show_hidden">Show Hidden File</string>
    <string name="prefs_show_network">Show Network</string>
    <string name="prefs_show_alias_up">Show Alias Up</string>
    <string name="prefs_show_root">Show From Root</string>

    <string name="prefs_show_hidden_summary">Show hidden file and folder.</string>
    <string name="prefs_show_network_summary">Show network at home.</string>
    <string name="prefs_show_alias_up_summary">Show up directory item.</string>
    <string name="prefs_show_root_summary">Show root as home</string>

    <string name="prefs_category_about">About</string>

    <string name="prefs_about">About File Chooser</string>
    <string name="version_text">Version - %s</string>

    <string name="about_text"><Data>
      <![CDATA["
      <p><b>File Chooser</b></p>
      <p>Develop by <a href='http://www.facebook.com/soeminnminn'>Soe Minn Minn</a></p>
      <p>Copyright \u00A9 2016 The Android Open Source Project</p>
      "]]>
    </Data></string>
</resources>
